# ChangeLog for mail-filter/procmail
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/procmail/ChangeLog,v 1.46 2009/09/23 17:55:39 patrick Exp $

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> procmail-3.22-r10.ebuild:
  Remove virtual/libc

  13 Jun 2009; Peter Alfredsen <loki_val@gentoo.org>
  procmail-3.22-r10.ebuild, +files/procmail-3.22-glibc-2.10.patch:
  Fix compilation with glibc-2.10, bug 270551.

  16 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -files/gentoo-maildir2.diff, -procmail-3.22-r7.ebuild,
  -procmail-3.22-r8.ebuild, -procmail-3.22-r9.ebuild:
  Cleanup

  16 Feb 2009; Brent Baude <ranger@gentoo.org> procmail-3.22-r10.ebuild:
  stable ppc64, bug 257184

  15 Feb 2009; Brent Baude <ranger@gentoo.org> procmail-3.22-r10.ebuild:
  stable ppc, bug 257184

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> procmail-3.22-r10.ebuild:
  Stable for HPPA (bug #257184).

  05 Feb 2009; Raúl Porcel <armin76@gentoo.org> procmail-3.22-r10.ebuild:
  arm/ia64/s390/sh stable wrt #257184

  01 Feb 2009; Markus Meier <maekke@gentoo.org> procmail-3.22-r10.ebuild:
  x86 stable, bug #257184

  01 Feb 2009; Tiago Cunha <tcunha@gentoo.org> procmail-3.22-r10.ebuild:
  stable amd64/sparc, bug 257184

  01 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
  procmail-3.22-r10.ebuild:
  Stable on alpha, bug #257184

*procmail-3.22-r10 (27 Dec 2008)

  27 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +procmail-3.22-r10.ebuild:
  Add note to configure a default mail storage location when using maildir
  (#249579), do not strip binaries and respect LDFLAGS (#249202)

  02 Dec 2008; Jeroen Roovers <jer@gentoo.org> procmail-3.22-r9.ebuild:
  Stable for HPPA (bug #233595).

  01 Dec 2008; Brent Baude <ranger@gentoo.org> procmail-3.22-r9.ebuild:
  stable ppc64, bug 233595

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  procmail-3.22-r9.ebuild:
  ppc stable, bug #233595
