@@ -7,6 +7,6 @@ AUX procmail-maxprocs-fix.diff 465 RMD160 edfd9d379cbdf95692c5fa152fc18e32b3b2d5
 AUX procmail-pipealloc.diff 825 RMD160 3334414d128d2eb0358a55caa06ad37570e052ba SHA1 87e6cb76f6c091d3a5afc528e31d18a3e9e73bd7 SHA256 bc2c755c287252d252fb46a60a86850074ca1020d4f0d0d272615c89db11d4ba
 AUX procmail-prefix.patch 5805 RMD160 15e32ba3d46ba90bde9c647088b0eac2bb2b0cdb SHA1 0edaa096c468c3551fff4696f362b705394cde28 SHA256 9788c77e7c5aab83c9044f2a4a3c0afbfa58d6c8c0cbbfb4cf1a5cb6446e2526
 DIST procmail-3.22.tar.gz 226817 RMD160 e609ec94ea9ab3b93629c62b3e29add497806483 SHA1 cd4e44c15559816453fd60349e5a32289f6f2965 SHA256 087c75b34dd33d8b9df5afe9e42801c9395f4bf373a784d9bc97153b0062e117
-EBUILD procmail-3.22-r10.ebuild 3083 RMD160 a3efa2c2c3877e227996061b91b52171ab57c0ca SHA1 e7c09786e4dea1a87913096789d6cf7acb439928 SHA256 94c47fe47a7382184ada07124fac79c2d32a5135e83194ad3966f3bac44f434a
-MISC ChangeLog 10080 RMD160 c6401328416848f2ba3985c89a5bf7c5779dba3f SHA1 d82d37227e32b3e09a1abc5327d693d00272dc74 SHA256 1eda2cd051fdc5e17456f1c00cab329bf07378a2c16c276e5b3b8ca9468209ae
+EBUILD procmail-3.22-r10.ebuild 3075 RMD160 88c3994cbd771fbc65190632a1ab24711507079b SHA1 cfabaf0f7f1dcb1ecc1bd1204e6efbb097e8049a SHA256 1e14aa18a955b70ddd1da7d6fc945d06a9b17402972ce4292ea98a6b38dbd285
+MISC ChangeLog 10182 RMD160 f311037e6e4fea5fb55fb9f08c39834d0cb003ab SHA1 9b1a7b39faba5477f538b49fe183f2aa4a4a2705 SHA256 78ae11f9119492990dd0285616d9d65e8500cef838abedb5d8d71a38312b3bc5
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
